[package]
name = "Mqtt2InfluxDb"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
influxdb2 = { version = "0.4", features = ["rustls"], default-features = false }
log = "0.4"
rumqttc = "0.22.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"]}
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
